# Hermit

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  cliff.toml  docker-compose.yml  install-macos.sh  install.sh  mkdocs.yml  pyproject.toml  pyrightconfig.json  repository-claim-status.json  北京天气.txt
.claude/: audit_findings_raw.md
.claude/rules/: kernel.md  plugins.md  testing.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  plugin_request.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dep-freshness.yml  future-compat.yml  pages.yml  release.yml  sync-wiki.yml
.hermit-proof/: adversarial-governance.json  adversarial-governance.md  demo-governed-hello.json  demo-governed-hello.md  demo-iteration.json  showcase-trace.md
.hermit/tmp/: apply_exception_fixes.py  full_typecheck_output.txt  mcp_fix.patch  orchestrator_errors.txt  patch_comment.py  patch_observation.py  patch_rules.py  pyright_after.txt  pyright_before.txt  pyright_errors.txt  target_errors.txt  typecheck_errors.txt
Formula/: hermit-agent.rb.template
dev/bench/: data.js
docs/: architecture.md  cli-and-operations.md  comparisons.md  configuration.md  context-model.md  demo-flows.md  design-philosophy.md  desktop-companion.md  ecosystem-submissions.md  faq.md  feishu-ingress-spec.md  getting-started.md  getting-started.zh-CN.md  governance.md  hermit-kernel-spec-v0.2.md  i18n-roadmap.md  i18n.md  index.md  kernel-conformance-matrix-v0.1.md  kernel-conformance-matrix-v0.2-core.md  kernel-spec-v0.1-section-checklist.md  kernel-spec-v0.1.md  llm-auto-loop.md  mcp-integration.md  memory-health-checklist.md  memory-model.md  openclaw-comparison.md  operator-guide.md  oss-docs-redesign-proposal.md  plugin-development.md  providers-and-profiles.md  receipts-and-proofs.md  release-notes-v0.3.md  release-rollback.md  repository-layout.md  roadmap.md  robots.txt  self-iteration.md  status-and-compatibility.md  tags.md  (+8 more)
docs/api/: index.md
docs/assets/: demo.cast  hermit-architecture-overview.excalidraw.json  hermit-differentiators-zh-cn.excalidraw.json  hermit-governed-path-zh-cn.excalidraw.json  hermit-vs-generic-agent.excalidraw.json
docs/blog/: .authors.yml
docs/overrides/: home.html  main.html
docs/site/: index.html  styles.css
docs/stylesheets/: landing.css
docs/supervisor-mode/: README.md  mcp.json  settings.local.json
examples/: README.md
examples/approval-workflow/: README.md  run.sh
examples/feishu-bot/: README.md  env.example
examples/quick-start/: README.md  run.sh
examples/scheduled-tasks/: README.md  schedule.example.json
hermit/: __init__.py  autostart.py  config.py  i18n.py  main.py
hermit/capabilities/: __init__.py  models.py
hermit/companion/: appbundle.py  control.py  menubar.py
hermit/core/: runner.py  sandbox.py  session.py  tools.py
hermit/identity/: __init__.py  models.py  service.py
reports/: codex-token-dashboard.html
scripts/: build_macos_dmg.py  bump_version.py  check_i18n.py  check_install_docs_sync.py  check_release_version.py  clean_build_artifacts.py  generate_codex_token_dashboard.py  generate_excalidraw_readme_assets.py  generate_release_notes.py  hermit-autostart-env.sh  hermit-dev.sh  hermit-env.sh  hermit-envctl.sh  hermit-iterate.sh  hermit-menubar-env.sh  hermit-menubar-install-env.sh  hermit-watch.py  hermit-watch.sh  migrate_structure.py  monitor_32_iterations.py  never-idle-e2e.sh  never-idle-observer.sh  parse_flaky_tests.py  record-demo.sh  select_test_shard.py  set-github-topics.sh  showcase-dashboard.py  showcase-throughput.py  submit_32_iterations.py
specs/: TEMPLATE.md  a2a-governed-endpoint.md  a2a-task-federation.md  adversarial-governance.md  agent-card-publisher.md  anomaly-detection-signals.md  autonomous-patrol-fix.md  budget-enforcement-policy.md  contract-template-learning.md  cross-step-policy-patterns.md  cross-step-taint-tracking.md  demo-add-iteration-summary-tool.md  demo-add-proof-summary-util.md  demo-governed-hello.md  dual-ledger-replanning.md  dynamic-trust-scoring.md  episodic-memory-index.md  execution-analytics.md  failure-pattern-recognition.md  governed-browser-session.md  governed-prompt-evolution.md  governed-self-evolution.md  governed-subagent-identity.md  governed-task-delegation.md  kernel-self-mod-guard.md  live-execution-streaming.md  mcp-elicitation-gateway.md  memory-decay-governance.md  memory-lineage-graph.md  merkle-proof-tree.md  mid-execution-steering.md  never-idle.md  otel-trace-export.md  phase3-rollback-test.md  proof-anchoring.md  receipt-replay-verifier.md  recursive-rollback.md  step-up-authorization.md  tool-sequence-optimizer.md
src/hermit/: config.py  (+5 more)
tests/: AGENTS.md  conftest.py  feishu_dispatcher_support.py  task_kernel_support.py  test_agent_core.py  test_autostart.py  test_build_macos_dmg.py  test_claude_provider_extra.py  test_cli.py  test_cli_error_branches.py  test_cli_more.py  test_codex_provider.py  test_codex_provider_extra.py  test_compact_commands.py  test_companion_appbundle.py  test_companion_control.py  test_companion_control_extra.py  test_companion_menubar.py  test_config.py  test_context.py  test_context7_plugin.py  test_context_compiler.py  test_dispatch_result.py  test_docs_alignment.py  test_feishu_adapter_extra.py  test_feishu_dispatcher.py  test_feishu_dispatcher_adapter_messages.py  test_feishu_dispatcher_cards_and_actions.py  test_feishu_dispatcher_lifecycle.py  test_feishu_dispatcher_normalize_runner.py  test_feishu_dispatcher_reactions.py  test_feishu_hooks_and_reaction_extra.py  test_feishu_reply_extra.py  test_feishu_tools_extra.py  test_grok_search.py  test_i18n.py  test_install_scripts.py  test_kernel_context_and_memory_services.py  test_kernel_coverage_boost.py  test_kernel_dispatch_and_controller_extra.py  (+34 more)
(+1409 files in other folders)
