[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermit-agent"
version = "0.2.3"
description = "Hermit personal AI agent MVP."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Beta" },
]
dependencies = [
  "anthropic>=0.57.1",
  "croniter>=6.0.0",
  "fastapi>=0.115.0",
  "lark-oapi>=1.4.18",
  "mcp>=1.26.0",
  "Pillow>=11.1.0",
  "pydantic>=2.11.1",
  "pydantic-settings>=2.8.1",
  "structlog>=25.1.0",
  "typer>=0.15.2",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "httpx>=0.28.0",
  "coverage>=7.13.4",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.0",
  "pre-commit>=4.2.0",
  "watchfiles>=1.1.1",
]
macos = [
  "rumps>=0.4.0",
]

[project.scripts]
hermit = "hermit.main:app"
hermit-menubar = "hermit.companion.menubar:main"
hermit-menubar-install-app = "hermit.companion.appbundle:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["hermit"]

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"hermit/main.py" = ["E402"]

[tool.setuptools.packages.find]
include = ["hermit*"]

[tool.setuptools.package-data]
"hermit" = [
  "builtin/**/plugin.toml",
  "builtin/**/skills/**/*.md",
  "builtin/**/rules/**/*.md",
  "locales/*.json",
]
