[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "hermit-agent"
version = "0.2.5"
description = "Local-first governed agent kernel for durable and inspectable AI work."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Beta" },
]
keywords = [
  "agent",
  "ai",
  "approvals",
  "audit-trail",
  "automation",
  "cli",
  "governance",
  "kernel",
  "local-first",
  "mcp",
  "proofs",
  "receipts",
  "rollback",
  "task-management",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
  "Natural Language :: English",
  "Natural Language :: Chinese (Simplified)",
  "Typing :: Typed",
]
dependencies = [
  "anthropic>=0.57.1",
  "croniter>=6.0.0",
  "fastapi>=0.115.0",
  "lark-oapi>=1.4.18",
  "mcp>=1.26.0",
  "python-telegram-bot>=22.0",
  "slack-bolt>=1.21.0",
  "Pillow>=11.1.0",
  "pydantic>=2.11.1",
  "pydantic-settings>=2.8.1",
  "structlog>=25.1.0",
  "textual>=3.0.0",
  "typer>=0.15.2",
  "uvicorn>=0.34.0",
]

[project.urls]
Homepage = "https://heggria.github.io/Hermit/"
Documentation = "https://heggria.github.io/Hermit/"
Repository = "https://github.com/heggria/Hermit"
Issues = "https://github.com/heggria/Hermit/issues"
Changelog = "https://github.com/heggria/Hermit/releases"
Discussions = "https://github.com/heggria/Hermit/discussions"

[project.optional-dependencies]
macos = [
  "rumps>=0.4.0",
]

[project.scripts]
hermit = "hermit.surfaces.cli.main:app"
hermit-menubar = "hermit.apps.companion.menubar:main"
hermit-menubar-install-app = "hermit.apps.companion.appbundle:main"

[dependency-groups]
dev = [
  "coverage>=7.13.4",
  "httpx>=0.28.0",
  "hypothesis>=6.0",
  "pre-commit>=4.2.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=7.0.0",
  "pytest-timeout>=2.4.0",
  "pytest-benchmark>=5.1.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.14.0",
  "watchfiles>=1.1.1",
]
typecheck = [
  "pyright>=1.1.400",
]
docs = [
  "cairosvg>=2.7.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.0",
  "mkdocs-rss-plugin>=1.17.0",
  "pillow>=11.1.0",
]
security = [
  "cyclonedx-bom>=7.1.0",
  "diff-cover>=9.7.1",
  "pip-audit>=2.9.0",
]
release = [
  "build>=1.3.0",
  "twine>=6.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hermit"]
include = [
  "src/hermit/**/*.json",
  "src/hermit/**/*.md",
  "src/hermit/**/*.tcss",
  "src/hermit/**/plugin.toml",
  "src/hermit/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
  "/.github",
  "/AGENTS.md",
  "/Dockerfile",
  "/LICENSE",
  "/Makefile",
  "/README.md",
  "/README.zh-CN.md",
  "/docker-compose.yml",
  "/docs",
  "/install-macos.sh",
  "/install.sh",
  "/pyproject.toml",
  "/scripts",
  "/src/hermit",
  "/tests",
  "/uv.lock",
]
exclude = [
  "/docs/site",
]

[tool.uv]
managed = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/scenario", "tests/e2e"]
asyncio_mode = "auto"
addopts = [
  "--strict-config",
  "--strict-markers",
  "--import-mode=importlib",
  "--durations=20",
  "--timeout=30",
  "-n", "auto",
  "--dist", "worksteal",
  "-ra",
]
markers = [
  "integration: exercises multi-component flows or external-process interactions",
  "e2e: validates end-to-end user or operator scenarios",
  "network: requires live network access or external services",
  "slow: takes noticeably longer than the default suite",
  "trustloop_bench: TrustLoop-Bench v0.2 exit criterion #12 tests",
  "benchmark: performance benchmark tests requiring pytest-benchmark",
]

[tool.coverage.run]
branch = true
source = ["src/hermit"]
omit = [
  "src/hermit/surfaces/cli/tui/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
]

[tool.pyright]
include = ["src/hermit"]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [
  "scripts/generate_codex_token_dashboard.py",
]

[tool.ruff.lint]
select = [
  "ASYNC",
  "B",
  "E",
  "F",
  "I",
  "RUF",
  "SIM",
  "UP",
]
ignore = [
  "E501",
  "RUF001",
  "RUF002",
  "RUF003",
  "RUF005",
  "RUF012",
  "SIM105",
  "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"src/hermit/surfaces/cli/main.py" = ["B008", "B904", "E402"]
"src/hermit/surfaces/cli/_commands_*.py" = ["B008", "B904"]
"src/hermit/surfaces/cli/_serve.py" = ["B904"]
"src/hermit/plugins/builtin/adapters/feishu/adapter.py" = ["B009", "B010"]
"src/hermit/plugins/builtin/adapters/feishu/reaction.py" = ["B009"]
"src/hermit/runtime/capability/registry/tools.py" = ["B010"]
"src/hermit/runtime/provider_host/execution/runtime.py" = ["B009"]
